# MediaTransport4j

./: .gitignore  LICENSE  README.md
natives/cpp-windows/: CMakeLists.txt  uwp_impl.cpp
natives/windows/: CMakeLists.txt  Cargo.toml  build.bat  uwp_impl.cpp  uwp_impl.h
natives/windows/src/: lib.rs
